--- a/style.css
+++ b/style.css
@@ -1,7 +1,19 @@
+html {
+    height: 100%;
+    width: 100%;
+}
+
+body
+{
+    width: 100%;
+    height: 100%;
+}
+
+
 #Page
 {
     width: 100%; 
-    height: 100%
+    height: 100%;
 }
 
 #Section_navbar
@@ -10,12 +22,22 @@
     height: auto;
 }
 
+#Section_content
+{
+    width: 100%;
+    height: 70%;
+}
+
+#Section_items
+{
+    width: 100%;
+    height: 25%;
+}
+
 .Navbar
 {
     width: 100%; 
-    height: auto;
-    position: fixed;
-    z-index: 1;
+    height: 5%;
     display: flex;
     flex-direction: row;
     justify-content: center;
@@ -51,4 +73,11 @@
     font-weight: 100;
     margin: 30px;
     filter: drop-shadow(1px 1px 2px white);
+}
+
+.content
+{
+    width: 100%;
+    height: 100%;
+    background-color: aqua;
 }
