--- a/style.css
+++ b/style.css
@@ -98,6 +98,16 @@ body
     border-style: dashed;
 }
 
+#gridC_main
+{
+    position: relative;
+    margin-left: 30%;
+    margin-top: 10%;
+    width: 40%;
+    height: 60%;
+}
+
+
 #content_gridL
 {
     height: 100%;
