--- a/style.css
+++ b/style.css
@@ -5,6 +5,8 @@ html {
 
 body
 {
+    margin: 0%;
+    padding: 0%;
     width: 100%;
     height: 100%;
 }
@@ -91,22 +93,24 @@ body
     background-color: antiquewhite;
 }
 
-.content_grid > #content_gridL, #content_gridR, #content_gridC
-{
-    background-color: blueviolet;
-    border-color: black;
-    border-style: dashed;
-}
-
 #gridC_main
 {
     position: relative;
-    margin-left: 30%;
-    margin-top: 10%;
-    width: 40%;
-    height: 60%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    /* margin-left: 30%;
+    margin-top: 10%; */ 
+    width: 100%;
+    height: 100%;
 }
 
+#mainactor
+{
+    border-style: solid;
+    width: 90%;
+    height: auto;
+}
 
 #content_gridL
 {
@@ -118,9 +122,27 @@ body
     padding: 0%;
 }
 
+
 #content_gridL > #gridL_top, #gridL_bottom
-{
+{  
+    
     background-color: blueviolet;
     border-color: black;
-    border-style: dashed;
+    width: 75%;
+    margin-left: 10%;
+    margin-top: 10%;
+}
+
+#gridL_top
+{
+    display: flex;
+    align-items: stretch;
+    flex-direction: column;
+}
+
+#gridL_top > #gridL_top_title, #gridL_top_mid, #gridL_top_progress
+{
+    background-color:  green;
+    width: 100%;
+    height: auto;
 }
