--- a/style.css
+++ b/style.css
@@ -1,4 +1,6 @@
-html {
+/* Global Styles */
+html 
+{
     height: 100%;
     width: 100%;
 }
@@ -12,11 +14,49 @@ body
 }
 
 
+
+/* Div Styles */
+
+.content
+{
+    width: 100%;
+    height: 100%;
+    /* background-color: aqua; */
+}
+
+.content_grid
+{
+    height: 100%;
+    width: 100%;
+    display: grid;
+    grid-template-columns: 33% 33% 33%;
+}
+
+
 #Page
 {
     width: 100%; 
     height: 100%;
+    background-image: url("/images/background.webp");
+    
 }
+
+#season_title
+{
+    font-family: Impact, 'Arial Narrow Bold', sans-serif;
+    font-size: xx-large; 
+    margin-top: auto;
+    margin-bottom: auto;
+    padding-top: 10px;
+    padding-bottom: 5px;
+    color: white;
+    display: flex;
+    justify-content: center;
+    /* margin: 20px 0 0 0; */
+}
+
+
+/* Section Styles */
 
 #Section_navbar
 {
@@ -36,6 +76,8 @@ body
     height: 25%;
 }
 
+/* navbar styles */
+
 .Navbar
 {
     width: 100%; 
@@ -54,6 +96,7 @@ body
     display: flex;
     align-items: center;
 }
+
 
 .Navbar_text
 {
@@ -77,39 +120,30 @@ body
     filter: drop-shadow(1px 1px 2px white);
 }
 
-.content
-{
-    width: 100%;
-    height: 100%;
-    background-color: aqua;
-}
 
-.content_grid
-{
-    height: 100%;
-    width: 100%;
-    display: grid;
-    grid-template-columns: auto 50% auto;
-    background-color: antiquewhite;
-}
+/* Grid styles (LEFT) */
 
-#gridC_main
+#gridL_top_title
 {
-    position: relative;
+    flex-grow: 0.5;
+    background-color: black;
+    border-style: solid;
     display: flex;
+    flex-direction: column;
     justify-content: center;
     align-items: center;
-    /* margin-left: 30%;
-    margin-top: 10%; */ 
-    width: 100%;
-    height: 100%;
-}
+} 
 
-#mainactor
+#gridL_top_progress
 {
-    border-style: solid;
-    width: 90%;
-    height: auto;
+    display: flex;
+    flex-direction: row;
+    flex-grow: 1;    
+    color: black;
+    border-style: double;
+    box-sizing: border-box;
+    border: 5px solid black;
+    
 }
 
 #content_gridL
@@ -117,20 +151,28 @@ body
     height: 100%;
     width: 100%;
     display: grid;
-    grid-template-rows: 65% 20%;
-    row-gap: 5%;
+    grid-template-rows: 70% 20%;
+    row-gap: 2%;
     padding: 0%;
+    z-index: 1;
 }
 
-
-#content_gridL > #gridL_top, #gridL_bottom
+#gridL_bottom
 {  
     
-    background-color: blueviolet;
-    border-color: black;
-    width: 75%;
-    margin-left: 10%;
-    margin-top: 10%;
+    width: 55%;
+    height: 100%;
+    margin-left: 25%;
+}
+
+#gridL_bottom_text
+{
+    display: flex;
+    flex-wrap: wrap;
+    overflow-y: scroll;
+    width: 100%;
+    height: 100%;   
+    background-color: black;
 }
 
 #gridL_top
@@ -138,11 +180,116 @@ body
     display: flex;
     align-items: stretch;
     flex-direction: column;
+    width: 55%;
+    margin-left: 25%;
+    margin-top: 10%;
+    background-color: aliceblue;
 }
 
-#gridL_top > #gridL_top_title, #gridL_top_mid, #gridL_top_progress
+#gridL_top_mid 
 {
-    background-color:  green;
+    opacity: 100%;
+    box-sizing: border-box;
+    border: 10px solid whitesmoke;
     width: 100%;
+    height: 100%;
+    background-size: cover;
+    background-image: url("/images/BP-img_Season1.png");
+    background-repeat: no-repeat;
+}
+
+#exp_text
+{
+    display: flex;
+    justify-content: space-evenly;
+    align-items: center;
+    color: white;
+    min-width: 50%;
+    max-width: 100%;
+}
+
+#description_text
+{
+    font-size: 16px;
+    color: white;
+    padding: 1%;
+    margin: 0%;
+    box-sizing: border-box;
+    border: 5px solid whitesmoke;  
+}
+
+#progressbar
+{
+    display: flex;
+    justify-content: center;
+    height: 100%;
+    width: 100%;
+    background-color: rgb(5, 68, 29);  
+    /* font-family: Impact, 'Arial Narrow Bold', sans-serif;
+    font-size: large; */
+}
+
+#currentlevel
+{
+    background-color: black;
+    width:10%;
+    height: 100%;
+    /* border-radius: ; */
+    color: white;
+    align-items: center;
+    justify-items: center;
+}
+
+#season_subtitle
+{
+    color: white;
+    font-family: Impact, 'Arial Narrow Bold', sans-serif;
+    font-size: large; 
+    margin: auto;
+}
+
+
+/* Grid styles (CENTER) */
+#content_gridC
+{
+    height: 100%;
+    width: 100%;
+    display: grid;
+    grid-template-rows: 70% 20%;
+    row-gap: 2%;
+    padding: 0%;
+    z-index: 1;
+}
+
+#gridC_top
+{
+    margin-top: 10%;
+    display: flex;
+    background-image: url("/images/BPimg_Amstrigian_Icon.png");
+    background-repeat: no-repeat;
+}
+
+#mainactor
+{
+    border-style: solid;
+    border-radius: 20%;
+    width: auto;
     height: auto;
+    max-width: 99%;
+    max-height: 99%;    
+    z-index: 1;
+}
+
+
+
+
+
+
+
+
+
+@keyframes expandWidth 
+{
+    0% { width: 0; }
+    100% { width: auto; }
 }
