--- a/style.css
+++ b/style.css
@@ -337,7 +337,6 @@ body
     width: 80%;
     height: 100%;
   
-    
     /* font-family: Impact, 'Arial Narrow Bold', sans-serif;
     font-size: large;
     font-style: normal;
@@ -368,6 +367,42 @@ body
     src: ("/images/BP-img_Dapperwing.png");
     box-sizing: border-box;
     border: 5px solid whitesmoke; 
+}
+
+#content_gridR
+{
+    height: 75%;
+    width: 100%;
+    display: grid;
+    grid-template-rows: 100%;
+    padding: 0%;
+    z-index: 1;
+}
+
+#gridR_main
+{
+    display: flex;
+    flex-direction: column;
+    width: 100%;
+    height: 85%;
+    margin-top: 10%;
+    box-sizing: border-box;
+    border: 5px solid whitesmoke; 
+}
+
+#thumbnail_img
+{
+    width: 100%;
+    height: 100%;
+}
+
+
+#thumbnail_description
+{
+    height: 100%;
+    width: 100%;
+    color: white;
+    background-color: #000;
 }
 
 @keyframes expandWidth 
