--- a/style.css
+++ b/style.css
@@ -369,26 +369,52 @@ body
     border: 5px solid whitesmoke; 
 }
 
+
+#gridC_bottom
+{
+    height: 100%;
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;   
+}
+
+
 #content_gridR
 {
-    height: 75%;
+    height: 100%;
     width: 100%;
     display: grid;
-    grid-template-rows: 100%;
+    grid-template-rows: 70% 20%;
+    row-gap: 0;
     padding: 0%;
     z-index: 1;
+    border: solid;
 }
+
 
 #gridR_main
 {
+    margin-top: 10%;
     display: flex;
     flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    border: solid;
     width: 100%;
-    height: 85%;
-    margin-top: 10%;
-    box-sizing: border-box;
-    border: 5px solid whitesmoke; 
 }
+
+
+#gridR_main_content
+{
+    width: 50%;
+    height: 50%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+
 
 #thumbnail_img
 {
@@ -396,13 +422,33 @@ body
     height: 100%;
 }
 
+#cost_text
+{
+    background-color: #000;
+}
+
+#thumbnail_cost
+{
+    display: flex;
+    justify-content: flex-end;
+    align-items: center;
+    font-family: 'Courier New', Courier, monospace;
+    font-size: x-large;
+    color: white;
+    
+    width: 100%;
+}
 
 #thumbnail_description
 {
-    height: 100%;
-    width: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-family: 'Courier New', Courier, monospace;
+    font-size: x-large;
     color: white;
     background-color: #000;
+    width: 100%;
 }
 
 @keyframes expandWidth 
