--- a/style.css
+++ b/style.css
@@ -389,7 +389,7 @@ body
     row-gap: 0;
     padding: 0%;
     z-index: 1;
-    border: solid;
+   
 }
 
 
@@ -400,7 +400,6 @@ body
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    border: solid;
     width: 100%;
 }
 
@@ -418,6 +417,8 @@ body
 
 #thumbnail_img
 {
+    box-sizing: border-box;
+    border: 5px solid whitesmoke; 
     width: 100%;
     height: 100%;
 }
@@ -433,8 +434,9 @@ body
     justify-content: flex-end;
     align-items: center;
     font-family: 'Courier New', Courier, monospace;
-    font-size: x-large;
+    font-size: large;
     color: white;
+    background-color: black;
     
     width: 100%;
 }
@@ -445,7 +447,7 @@ body
     justify-content: center;
     align-items: center;
     font-family: 'Courier New', Courier, monospace;
-    font-size: x-large;
+    font-size: large;
     color: white;
     background-color: #000;
     width: 100%;
