--- a/style.css
+++ b/style.css
@@ -1,8 +1,8 @@
 /* Global Styles */
 html 
 {
-    height: 100%;
-    width: 100%;
+    /* height: 100%;
+    width: 100%; */
 }
 
 body
@@ -34,6 +34,8 @@ body
 
 #Page
 {
+    display: flex;
+    flex-direction: column;
     width: 100%; 
     height: auto;
     background-image: url("/images/mhwbackground.png");
@@ -64,14 +66,16 @@ body
 
 #Section_content
 {
-    width: 100%;
-    height: 70%;
+    display: flex;
+    align-items: center;
+    /* width: 100%;
+    height: 70%; */
 }
 
 #Section_items
 {
-    width: 100%;
-    height: 25%;
+    /* width: 100%;
+    height: 25%; */
 }
 
 /* navbar styles */
@@ -346,7 +350,7 @@ body
 .gallery
 {
     display: flex;
-    width: 80%;
+    width: 100%;
     overflow: auto;
     white-space: nowrap;
     gap: 2%;
@@ -355,11 +359,10 @@ body
 .itemimg
 {
     border-radius: 10%;
-    width: 80%;
-    max-height: 80%;
-    src: ("/images/BP-img_Dapperwing.png");
+    min-height: 322px;
+    width: 322px;
     box-sizing: border-box;
-    border: 5px solid whitesmoke; 
+    border: 5px solid whitesmoke;
 }
 
 /* Grid right content */
@@ -386,15 +389,17 @@ body
     width: 100%; */
 
     display: flex;
-    flex-direction: column;
+    /* flex-direction: column; */
     align-items: center;
+    justify-content: center;
 }
+
 
 
 #gridR_main_content
 {
     display: flex;
-    flex-direction: column;
+    justify-content: center;
     width: 55%;
     margin-top: 10%;
 
@@ -404,6 +409,13 @@ body
     flex-direction: column;
     justify-content: center; */
     /* align-items: center; */
+}
+
+#gridR_bottom
+{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
 }
 
 
@@ -418,33 +430,43 @@ body
 
 #cost_text
 {
-    background-color: #000;
+    /* background-color: #000; */
 }
 
 
 #thumbnail_cost
 {
-    display: flex;
-    justify-content: flex-end;
-    align-items: center;
-    font-family: 'Courier New', Courier, monospace;
-    font-size: x-large;
+    text-shadow: 2px 2px #000;
     color: white;
-    background-color: black;
-    width: 100%;
+    padding: 0%;
+    margin: 5px;
+    font-family: Impact, 'Arial Narrow Bold', sans-serif;
+    font-size: x-large;
 }
 
 
 #thumbnail_description
 {
-    display: flex;
+    /* display: flex;
     justify-content: center;
     align-items: center;
     font-family: 'Courier New', Courier, monospace;
     font-size: large;
     color: white;
     background-color: #000;
-    width: 100%;
+    width: 100%; */
+
+
+
+    background-color: rgb(5, 68, 29);
+    color: white;
+    padding-left: 5px;
+    padding-right: 5px;
+    margin: 0;
+    font-family: Impact, 'Arial Narrow Bold', sans-serif;
+    font-size: xx-large;
+    box-sizing: border-box;
+    border: 5px solid black;
 }
 
 @keyframes expandWidth 
@@ -452,7 +474,7 @@ body
     0% { width: 0; }
     100% { width: auto; }
 }
-
+/* 
 @media (min-width: 1920px) and (max-height: 1280px)
 {
     #content_gridL 
@@ -527,7 +549,7 @@ body
         display: none;
     }
 
-}
+} */
 
 /* #content_gridC
 {
